--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
-  },
+"scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "node app.js",
+  "dev": "nodemon app.js"
+}
+,
   "author": "",
   "license": "ISC",
   "type": "module",
