--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "framer-motion": "^12.12.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5"
